<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">河北新闻</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    
    <string name="login_note_text">登录后，即可享受更多服务</string>
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_login">登录</string>
    <string name="login_regist">注册账号</string>
    
    <!-- 注册界面 -->
    <string name="regist_note_text">注册账号</string>
    <string name="regist_registbtn">注册</string>

</resources>